finished, added complete and delete features to component; all items placed in a card; fixed text overflow problem

--- a/code/nick/javascript/todos/css/style.css
+++ b/code/nick/javascript/todos/css/style.css
@@ -12,3 +12,6 @@ main {
     color: #e57373;
   }
 
+p {
+  word-wrap: break-word
+}
